# ml-engineering-projects

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
projects/01-real-estate-airflow-dvc-pipeline/: README.md
projects/01-real-estate-airflow-dvc-pipeline/airflow/: Dockerfile  docker-compose.yaml
projects/01-real-estate-airflow-dvc-pipeline/dvc_pipeline/: dvc.yaml  params.yaml
projects/02-real-estate-mlflow-model-improvement/: README.md
projects/02-real-estate-mlflow-model-improvement/baseline/: params.yaml
projects/02-real-estate-mlflow-model-improvement/docs/: eda_summary.md
projects/02-real-estate-mlflow-model-improvement/mlflow_server/: .env.example  fix_and_run_mlflow.sh  log_baseline.py  start_mlflow.sh
projects/02-real-estate-mlflow-model-improvement/notebooks/: real_estate_model_improvement.ipynb
projects/03-real-estate-price-api-monitoring/: Dockerfile  README.md  docker-compose.yaml
projects/03-real-estate-price-api-monitoring/monitoring/: grafana-dashboard.json
projects/03-real-estate-price-api-monitoring/scripts/: load_generator.py  update_grafana_datasource.py
projects/03-real-estate-price-api-monitoring/services/: .env.example  requirements.txt
projects/04-music-recommendation-service/: README.md
projects/05-food-delivery-uplift-modeling/: README.md  requirements.txt
projects/06-ecommerce-recommendation-platform/: .dockerignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.airflow.yml  docker-compose.yml  requirements.txt
(+25 files in other folders)
