[project]
name = "ml-engineering-projects"
version = "0.1.0"
description = "Public ML engineering projects monorepo."
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
(
  \.ipynb$
  | /data/
  | /models/
  | /mlruns/
)
'''

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "*.ipynb",
  "**/data/**",
  "**/models/**",
  "**/mlruns/**",
  "**/.dvc/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["projects"]
python_files = ["test_*.py", "*_test.py"]
